tests/NormalTests/paczka1/fuzzy1/75304710.err
Error in line 4: gMKdLJx S193 33,6
Error in line 13: cTfHYcI S643 18,8
Error in line 18: hV2Uip A423 76,9
Error in line 28: gMKdLJx S643 2,8
Error in line 25: FwJvFMdW3 S193 25,2
Error in line 34: FwJvFMdW3 S796 19,6
